[package]
name = "mock-oracle"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bigdecimal = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.20"
num-integer = "0.1.45"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
starknet = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
